@@ -14,10 +14,10 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 428d6b10057dbef9a7305ef72279ab2cf81c3d20 ChangeLog
+SHA1 a297cca07b69d8c187ea3670052dc7058c48d2cf ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 536d4ce30b1934be585da55e463477877c31fe8c MANIFEST
-SHA1 2deb550201b06164510fbb8fb6a70fc511bbf702 META.yml
+SHA1 6a1847f321369c3d876239187562ff80cef671b2 META.yml
 SHA1 85f9401b2c422cd079d521911905670a71d266c1 Makefile.PL
 SHA1 2af679880fb8ac967e5d63069f8ec3b3508425d3 README
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
@@ -31,13 +31,13 @@ SHA1 b721c93ca5bc9a6aa863b49af15f1b1de6125935 inc/Module/Install/Makefile.pm
 SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 42ae36b87bdfc7863eabf35d4f3d71cfa1626966 lib/Term/Menus.pm
+SHA1 dcc58d68d9f9c88f4c91b36ed5f20a6d173a7bbf lib/Term/Menus.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 ded9def7d10cf71606da96112acc159e0aa9a582 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAk8VD7oACgkQ2NfPFcKvV2BllACfRZh5pCn6O7R0CXbn6+v/CprT
-G5YAoJ+Y7KemRotGYR34Pu1FdNzEdFWm
-=uOLR
+iEYEARECAAYFAk8bji4ACgkQ2NfPFcKvV2AsdgCffTyHlqeugviFEt45vSDyL+mp
+xpEAnA4O2G3pgTLutAzhkvP/dxTtFhSc
+=Ks7D
 -----END PGP SIGNATURE-----
